Added all clinician apis
