# src/controllers/visit.js
@@ -5,7 +5,7 @@ const fs = require("fs");
 const path = require("path");
 
 const { getTenantDB } = require("../lib/dbManager.js");
-const { getFilterQuery } = require("../lib/utils.js");
+const { getFilterQuery, sendMessageToUIPath } = require("../lib/utils.js");
 
 const { sendAccountVerificationEmail } = require("../lib/emails.js");
 const mongoose = require("mongoose");
@@ -20,7 +20,11 @@ const Form_Type = require("../model/tenant/formType.js");
 const Form = require("../model/tenant/form.js");
 const Assessment = require("../model/tenant/assessment.js");
 
-const { createFolder } = require("../lib/aws.js");
+const {
+  pushToQueue,
+  deleteMessageFromQueue,
+  downloadFile,
+} = require("../lib/aws.js");
 require("dotenv").config();
 const {
   responses: { SuccessResponse, HTTPError, ERROR_CODES },
@@ -85,7 +89,9 @@ const listVisit = async (req, res) => {
   try {
     const connection = await getTenantDB(req.tenantDb);
     const VisitModel = Visit(connection);
+    let clinicianId = req.user.id;
     let { query, parsedLimit, parsedOffset } = getFilterQuery(req.query);
+    query.clinicianId = new mongoose.Types.ObjectId(clinicianId);
 
     let visit = await VisitModel.aggregate([
       { $match: query },
@@ -194,6 +200,18 @@ const listAssessment = async (req, res) => {
   }
 };
 
+const getAssessmentById = async (req, res) => {
+  try {
+    const { id } = req.params;
+    const { connection, session } = await startDatabaseSession(req.tenantDb);
+    const AssessmentModel = Assessment(connection);
+    const assessment = await AssessmentModel.findById(id);
+    return res.status(200).json(new SuccessResponse(assessment));
+  } catch (error) {
+    return res.status(500).json(new ErrorResponse(error.message));
+  }
+};
+
 const createVisit = async (req, res) => {
   const { connection, session } = await startDatabaseSession(req.tenantDb);
 
@@ -224,7 +242,13 @@ const createVisit = async (req, res) => {
 
     const form = await getOrCreateForm(connection, session);
     await createAssessment(form.id, visit.id, connection, session);
-
+    await createNotification(
+      clinician.userId,
+      `New visit created for client ${client.firstName} ${client.lastName}`,
+      "Visit Created",
+      connection,
+      session
+    );
     await session.commitTransaction();
     return res.status(201).json(new SuccessResponse(visit));
   } catch (error) {
@@ -235,6 +259,115 @@ const createVisit = async (req, res) => {
   }
 };
 
+const createVisitFromRPA = async (err, data) => {
+  let msg;
+
+  try {
+    if (err) {
+      logger.error(`message container error: ${err.toString()}`);
+      return {
+        msgStatus: false,
+        reason: `message contains error: ${err.toString()}`,
+      };
+    }
+    if (data) {
+      msg = JSON.parse(data.Body);
+      logger.debug(`Create Visit message body: ${data.Body}`);
+      if (!msg) {
+        logger.debug(
+          "Something wrong happened during verification. Most probably object does not exist."
+        );
+        throw new Error(
+          "Something wrong happened during verification. Most probably object does not exist."
+        );
+      }
+    }
+    const { connection, session } = await startDatabaseSession(msg.tenantDb);
+
+    try {
+      const requestData = extractRequestData(msg.body);
+
+      const clinician = await getOrUpdateClinician(
+        requestData,
+        connection,
+        session
+      );
+      if (!clinician) throw new Error("Clinician not found");
+
+      const episode = await getOrCreateEpisode(
+        requestData,
+        connection,
+        session
+      );
+      const client = await getOrUpdateClient(requestData, connection, session);
+
+      const visit = await createVisitRecord(
+        requestData,
+        clinician.userId,
+        episode._id,
+        client._id,
+        connection,
+        session
+      );
+      if (!visit) throw new Error("Visit already exists");
+
+      const form = await getOrCreateForm(connection, session);
+      await createAssessment(form.id, visit.id, connection, session);
+      await createNotification(
+        clinician.userId,
+        `New visit created for client ${client.firstName} ${client.lastName}`,
+        "Visit Created",
+        connection,
+        session
+      );
+      await session.commitTransaction();
+      return { msgStatus: true, reason: "Visit created successfully" };
+    } catch (error) {
+      await session.abortTransaction();
+
+      throw error;
+    } finally {
+      session.endSession();
+    }
+  } catch (error) {
+    logger.error(`message container error: ${error.toString()}`);
+    await pushToQueue(process.env.RPA_DATA_QUEUE_DLQ, {
+      msgStatus: false,
+      reason: error.message,
+      tenantDb: msg.tenantDb,
+      body: msg.body,
+    });
+    await deleteMessageFromQueue(process.env.RPA_DATA_QUEUE, data);
+    return { msgStatus: false, reason: error.message };
+  } finally {
+    await deleteMessageFromQueue(process.env.RPA_DATA_QUEUE, data);
+  }
+};
+
+const createNotification = async (
+  clinicianId,
+  content,
+  type,
+  connection,
+  session
+) => {
+  const NotificationTypeModel = NotificationType(connection);
+  const notificationType = await NotificationTypeModel.findOne({
+    name: type,
+  });
+  const NotificationModel = Notification(connection);
+  await NotificationModel.create(
+    [
+      {
+        userId: clinicianId,
+        notificationTypeId: notificationType._id,
+        notificationContent: content,
+      },
+    ],
+    { session }
+  );
+};
+
 /** Extract request data from req.body */
 const extractRequestData = (body) => ({
   clinicianNo: body["Clinician ID"],
@@ -243,13 +376,17 @@ const extractRequestData = (body) => ({
   clinicianDOB: body["Clinician Date of Birth"],
   clinicianDiscipline: body["Clinician Discipline"],
   clinicianAge: body["Clinician Age"],
+  clinicianGender: body["Clinician Gender"],
   clinicianStatus: body["Clinician Status"],
   clinicianState: body["Clinician State"],
   clinicianCity: body["Clinician City"],
+  clinicianCounty: body["Clinician County"],
   clinicianAddress1: body["Clinician Address 1"],
   clinicianAddress2: body["Clinician Address 2"],
   clinicianZip: body["Clinician Zip"],
   clinicianPrimaryPhone: body["Clinician Cell"],
+  clinicianOfficialMailId: body["Clinician Official Email ID"],
+  clinicianSSN: body["Clinician SSN"],
   episodeNo: body["Episode Number"],
   episodeDuration: body["Episode Duration"],
   startDate: body["Episode Start Date"],
@@ -265,6 +402,8 @@ const extractRequestData = (body) => ({
   address1: body["Client Address 1"],
   address2: body["Client Address 2"],
   primaryPhone: body["Client Phone"],
+  emergencyContact: body["Client Emergency Contact"],
+  emergencyContactNo: body["Client Emergency Contact #"],
   visitNo: body["Visit ID"],
   visitDate: body["Visit Date"],
   week: body["Week"],
@@ -276,20 +415,23 @@ const extractRequestData = (body) => ({
 /** Get or update the clinician record */
 const getOrUpdateClinician = async (data, connection, session) => {
   const Clinician_InfoModel = Clinician_Info(connection);
-
-  let clinician = await Clinician_InfoModel.findOne({
-    clinicianNo: data.clinicianNo,
+  let query = Clinician_InfoModel.findOne({
+    clinicianNo: data.clinicianNo.toString(),
   }).session(session);
+  console.log("Executing Query:", query.getFilter()); // Print the query
+
+  let clinician = await query;
   if (!clinician) return null;
 
   return await Clinician_InfoModel.findOneAndUpdate(
-    { clinicianNo: data.clinicianNo },
+    { clinicianNo: data.clinicianNo.toString() },
     {
       firstName: data.clinicianFirstName,
       lastName: data.clinicianLastName,
       status: data.clinicianStatus,
       discipline: data.clinicianDiscipline,
       age: data.clinicianAge,
+      gender: data.clinicianGender,
       dob: data.clinicianDOB,
       address1: data.clinicianAddress1,
       address2: data.clinicianAddress2,
@@ -297,6 +439,10 @@ const getOrUpdateClinician = async (data, connection, session) => {
       state: data.clinicianState,
       zip: data.clinicianZip,
       primaryPhone: data.clinicianPrimaryPhone,
+      secondaryPhone: data.clinicianSecondaryPhone,
+      county: data.clinicianCounty,
+      ssn: data.clinicianSSN,
+      officialMailId: data.clinicianOfficialMailId,
     },
     { new: true, runValidators: true, session }
   );
@@ -349,6 +495,8 @@ const getOrUpdateClient = async (data, connection, session) => {
           address1: data.address1,
           address2: data.address2,
           primaryPhone: data.primaryPhone,
+          emergencyContact: data.emergencyContact,
+          emergencyContactNo: data.emergencyContactNo,
         },
       ],
       { session }
@@ -369,6 +517,8 @@ const getOrUpdateClient = async (data, connection, session) => {
       address1: data.address1,
       address2: data.address2,
       primaryPhone: data.primaryPhone,
+      emergencyContact: data.emergencyContact,
+      emergencyContactNo: data.emergencyContactNo,
     },
     { new: true, runValidators: true, session }
   );
@@ -434,7 +584,6 @@ const getOrCreateForm = async (connection, session) => {
 /** Create an assessment record */
 const createAssessment = async (formId, visitId, connection, session) => {
   const AssessmentModel = Assessment(connection);
-
   await AssessmentModel.create([{ formId, visitId }], { session });
 };
 
@@ -446,6 +595,147 @@ const startDatabaseSession = async (tenantDb) => {
   return { connection, session };
 };
 
+const updateVisit = async (req, res) => {
+  const { connection, session } = await startDatabaseSession(req.tenantDb);
+  const VisitModel = Visit(connection);
+  const visit = await VisitModel.findByIdAndUpdate(req.params.id, req.body, {
+    new: true,
+  });
+  return res.status(200).json(new SuccessResponse(visit));
+};
+
+const updateAssessment = async (req, res) => {
+  const { connection, session } = await startDatabaseSession(req.tenantDb);
+  const AssessmentModel = Assessment(connection);
+
+  if (req.body.answer) {
+    await sendMessageToUIPath(req.body);
+    req.body.status = "Submitted to EMR";
+  }
+  const assessment = await AssessmentModel.findByIdAndUpdate(
+    req.params.id,
+    req.body,
+    {
+      new: true,
+    }
+  );
+  return res.status(200).json(new SuccessResponse(assessment));
+};
+
+const processAIOutput = async (err, data) => {
+  let msg;
+
+  try {
+    if (err) {
+      logger.error(`message container error: ${err.toString()}`);
+      return {
+        msgStatus: false,
+        reason: `message contains error: ${err.toString()}`,
+      };
+    }
+    if (data) {
+      msg = JSON.parse(data.Body);
+      logger.debug(`AI Output message body: ${data.Body}`);
+    }
+
+    const { connection, session } = await startDatabaseSession(msg.company_id);
+    let jsonContent;
+    try {
+      const s3Response = await downloadFile(msg.bucketName, msg.answerPath);
+      // Convert S3 response buffer to string and store JSON content
+      const responseBuffer = s3Response.Body;
+      if (!(responseBuffer instanceof Buffer)) {
+        throw new Error("S3 response body is not a buffer");
+      }
+      jsonContent = responseBuffer.toString("utf-8");
+      msg.aiOutput = JSON.parse(jsonContent);
+    } catch (error) {
+      logger.error(`Error downloading from S3: ${error.toString()}`);
+      throw error;
+    }
+
+    const AssessmentModel = Assessment(connection);
+    const VisitModel = Visit(connection);
+    const assessment = await AssessmentModel.findByIdAndUpdate(
+      msg.assessmentId,
+      {
+        $set: {
+          assessmentAnswer: jsonContent,
+          status: "Validation",
+        },
+      }
+    );
+  } catch (error) {
+    logger.error(`message container error: ${error.toString()}`);
+    await pushToQueue(process.env.AI_OUTPUT_DLQ_QUEUE_URL, {
+      msgStatus: false,
+      reason: error.message,
+      body: data.Body,
+    });
+    return { msgStatus: false, reason: error.message };
+  } finally {
+    await deleteMessageFromQueue(process.env.AI_OUTPUT_QUEUE_URL, data);
+  }
+};
+
+const updateAssessmentFromRPA = async (err, data) => {
+  let msg;
+
+  try {
+    if (err) {
+      logger.error(`message container error: ${err.toString()}`);
+      return {
+        msgStatus: false,
+        reason: `message contains error: ${err.toString()}`,
+      };
+    }
+    if (data) {
+      msg = JSON.parse(data.Body);
+      logger.debug(`Update Assessment message body: ${data.Body}`);
+    }
+
+    const { connection, session } = await startDatabaseSession(msg.tenantDb);
+    const AssessmentModel = Assessment(connection);
+    const assessment = await AssessmentModel.findByIdAndUpdate(
+      msg.assessmentId,
+      { status: "Completed" },
+      {
+        new: true,
+      }
+    );
+    const assessments = await AssessmentModel.find({ visitId: msg.visitId });
+    const allSubmittedToEMR = assessments.every(
+      (a) => a.status === "Submitted to EMR"
+    );
+    const allCompleted = assessments.every((a) => a.status === "Completed");
+
+    logger.debug(`allSubmittedToEMR: ${allSubmittedToEMR}`);
+    logger.debug(`allCompleted: ${allCompleted}`);
+
+    if (allCompleted) {
+      await VisitModel.findByIdAndUpdate(msg.visitId, {
+        status: "Completed",
+      });
+    } else if (allSubmittedToEMR) {
+      await VisitModel.findByIdAndUpdate(msg.visitId, {
+        status: "Submitted",
+      });
+    }
+
+    return res.status(200).json(new SuccessResponse(assessment));
+  } catch (error) {
+    logger.error(`message container error: ${error.toString()}`);
+    await pushToQueue(process.env.RPA_UPDATE_DLQ_QUEUE_URL, {
+      msgStatus: false,
+      reason: error.message,
+      body: data.Body,
+    });
+    return { msgStatus: false, reason: error.message };
+  } finally {
+    await deleteMessageFromQueue(process.env.RPA_UPDATE_QUEUE_URL, data);
+  }
+};
+
 module.exports = {
   createForm,
   createVisit,
@@ -453,4 +743,10 @@ module.exports = {
   listVisit,
   listEpisode,
   listAssessment,
+  createVisitFromRPA,
+  updateVisit,
+  updateAssessment,
+  getAssessmentById,
+  processAIOutput,
+  updateAssessmentFromRPA,
 };
