# src/model/default/notificationType.js
@@ -1,0 +1,44 @@
+module.exports = [
+  {
+    name: "AI Processing",
+  },
+  {
+    name: "AI Process Failed",
+  },
+  {
+    name: "AI Process Success",
+  },
+  {
+    name: "Assessment Completed",
+  },
+  {
+    name: "Assessment Failed",
+  },
+  {
+    name: "Assessment Success",
+  },
+  {
+    name: "Visit Started",
+  },
+  {
+    name: "Visit Failed",
+  },
+  {
+    name: "Visit Success",
+  },
+  {
+    name: "Visit Completed",
+  },
+  {
+    name: "New Visits",
+  },
+  {
+    name: "New Assessments",
+  },
+  {
+    name: "Pending Visits",
+  },
+  {
+    name: "Pending Assessments",
+  },
+];
